--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "devDependencies": {
     "ava": "^3.15.0",
+    "nyc": "^15.1.0",
     "require-inject": "^1.4.4"
   },
   "scripts": {
-    "test": "ava"
+    "test": "nyc --reporter=lcov --reporter=text-summary ava --serial"
   }
 }
